--- a/InfoTrack.SearchEngine.PageRanker.Web/InfoTrack.SearchEngine.PageRanker.Web.csproj
+++ b/InfoTrack.SearchEngine.PageRanker.Web/InfoTrack.SearchEngine.PageRanker.Web.csproj
@@ -33,6 +33,10 @@
     <TypeScriptCompile Remove="ClientApp\src\components\Layout.tsx" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\InfoTrack.SearchEngine.PageRanker.Services\InfoTrack.SearchEngine.PageRanker.Services.csproj" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
